crates/qwik-optimizer-oxc/tests/snapshots/should_extract_single_qrl_with_index.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
export const App = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const selectedItem = useSignal<any | null>(null);
  const clickedIndex = useSignal<number | null>(null);
  return (
    <div>
      {data.value.map((row, idx) => (
        <tr key={untrack(() => row.value.id)} class={row.value.selected.value ? "danger" : ""}>
          <td class="col-md-1">{row.value.id}</td>
          <td class="col-md-4">
            <a
              onClick$={() => {
                if (selectedItem.value) {
                  selectedItem.value.selected.value = false;
                }
                selectedItem.value = row.value;
                row.value.selected.value = true;
                clickedIndex.value = idx;
              }}
            >
              {row.value.label.value}
            </a>
          </td>
          <td class="col-md-1">
            <a
              onClick$={() => {
                const dataValue = untrack(() => data.value);
                data.value = dataValue.toSpliced(
                  dataValue.findIndex((d) => d.value.id === row.value.id),
                  1,
                );
              }}
            >
              <span aria-hidden="true">x</span>
            </a>
          </td>
          <td class="col-md-6" />
        </tr>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
const i_7dJ1fH050Bg = () => import("./test.tsx_App_component_a_q_e_click_7dJ1fH050Bg");
const i_7dJ1fH050Bg = () => import("./test.tsx_App_component_a_q_e_click_7dJ1fH050Bg");
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_7dJ1fH050Bg = () => import("./test.tsx_App_component_a_q_e_click_7dJ1fH050Bg");
const i_7dJ1fH050Bg = () => import("./test.tsx_App_component_a_q_e_click_7dJ1fH050Bg");
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
export const App_component_XumqEURaLxI = () => {
	const data = useSignal < Signal < any > [] > [];
	const selectedItem = useSignal < any | null > null;
	const clickedIndex = useSignal < number | null > null;
	return /* @__PURE__ */ _jsxSorted("div", null, null, data.value.map((row, idx) => /* @__PURE__ */ _jsxSorted("tr", null, { class: _fnSignal(_hf0, [row], _hf0_str) }, [
		/* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-1" }, row.value.id, 3, "u6_0"),
		/* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-4" }, /* @__PURE__ */ _jsxSorted("a", null, { "q-e:click": /* @__PURE__ */ qrl(i_7dJ1fH050Bg, "App_component_a_q_e_click_7dJ1fH050Bg", [selectedItem, clickedIndex]) }, row.value.label.value, 3, "u6_1"), 3, "u6_2"),
		/* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-1" }, /* @__PURE__ */ _jsxSorted("a", null, { "q-e:click": /* @__PURE__ */ qrl(i_7dJ1fH050Bg, "App_component_a_q_e_click_7dJ1fH050Bg", [data]) }, /* @__PURE__ */ _jsxSorted("span", null, { "aria-hidden": "true" }, "x", 3, "u6_3"), 3, "u6_4"), 3, "u6_5"),
		/* @__PURE__ */ _jsxSorted("td", null, { class: "col-md-6" }, null, 3, "u6_6")
	], 1, untrack(() => row.value.id))), 3, "u6_7");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_a_q_e_click_7dJ1fH050Bg.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
export const App_component_a_q_e_click_7dJ1fH050Bg = () => {
	const selectedItem = _captures[0];
	const clickedIndex = _captures[1];
	if (selectedItem.value) {
		selectedItem.value.selected.value = false;
	}
	selectedItem.value = row.value;
	row.value.selected.value = true;
	clickedIndex.value = idx;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_a_q_e_click_7dJ1fH050Bg",
  "entry": null,
  "displayName": "test.tsx_App_component_a_q_e_click",
  "hash": "7dJ1fH050Bg",
  "canonicalFilename": "test.tsx_App_component_a_q_e_click_7dJ1fH050Bg",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "selectedItem",
    "clickedIndex"
  ]
}
*/

=== test.tsx_App_component_a_q_e_click_7dJ1fH050Bg.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
export const App_component_a_q_e_click_7dJ1fH050Bg = () => {
	const data = _captures[0];
	const dataValue = untrack(() => data.value);
	data.value = dataValue.toSpliced(dataValue.findIndex((d) => d.value.id === row.value.id), 1);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_a_q_e_click_7dJ1fH050Bg",
  "entry": null,
  "displayName": "test.tsx_App_component_a_q_e_click",
  "hash": "7dJ1fH050Bg",
  "canonicalFilename": "test.tsx_App_component_a_q_e_click_7dJ1fH050Bg",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_App_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "data"
  ]
}
*/
