crates/qwik-optimizer-oxc/tests/snapshots/should_mark_props_as_var_props_for_inner_cmp.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { useResourceQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_JrQIeK5mMMM = () => import("./test.tsx_Image_component_JrQIeK5mMMM");
const i_N1fNAC4qw7Q = () => import("./test.tsx_ModelImg_component_N1fNAC4qw7Q");
const i_bT0HZe0FfwQ = () => import("./test.tsx_imgLoc_useResource_bT0HZe0FfwQ");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { component$, useResource$, Resource } from "@qwik.dev/core";
import { type ModelProps } from "./modelMenu";
import { serverImg } from "~/routes/(authenticated)/layout";
export const Image = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_JrQIeK5mMMM, "Image_component_JrQIeK5mMMM"));
export const ModelImg = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_N1fNAC4qw7Q, "ModelImg_component_N1fNAC4qw7Q"));

=== test.tsx_Image_component_JrQIeK5mMMM.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Image_component_JrQIeK5mMMM = (props) => {
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, /* @__PURE__ */ _jsxSorted("img", { src: `${props.src}` }, null, null, 3, "u6_0"), 3, "u6_1");
};

=== test.tsx_ModelImg_component_N1fNAC4qw7Q.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_bT0HZe0FfwQ = () => import("./test.tsx_imgLoc_useResource_bT0HZe0FfwQ");
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const ModelImg_component_N1fNAC4qw7Q = (props) => {
	const imgLoc = /* @__PURE__ */ useResourceQrl(/* @__PURE__ */ qrl(i_bT0HZe0FfwQ, "imgLoc_useResource_bT0HZe0FfwQ", [props]));
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, /* @__PURE__ */ _jsxSorted(Resource, {
		value: imgLoc,
		onRejected: () => /* @__PURE__ */ _jsxSorted("p", null, null, "error ...", 3, "u6_2"),
		onResolved: (res) => res && /* @__PURE__ */ _jsxSorted(_Fragment, null, null, /* @__PURE__ */ _jsxSorted(Image, { src: res }, null, null, 3, "u6_3"), 3, "u6_4")
	}, null, null, 3, "u6_5"), 3, "u6_6");
};

=== test.tsx_imgLoc_useResource_bT0HZe0FfwQ.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const imgLoc_useResource_bT0HZe0FfwQ = async ({ track }) => {
	const props = _captures[0];
	track(() => props.store.model);
	return await serverImg("some.png");
};
