crates/qwik-optimizer-oxc/tests/snapshots/should_merge_attributes_with_spread_props.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export default component$((props) => {
  return <div {...props} class={[props.class, "component"]} />;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_component_XXXXXXXXXXXX"),
);

=== test.tsx_default_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSplit } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
export const default_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSplit(
    "div",
    {
      ..._getVarProps(props),
      class: [props.class, "component"],
    },
    _getConstProps(props),
    null,
    0,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_default_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
