crates/qwik-optimizer-oxc/tests/snapshots/should_merge_bind_value_and_on_input.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal("");

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:value={localValue}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _val } from "@qwik.dev/core";
const i_O84bGdeej0g = () => import("./test.tsx_FieldInput_component_O84bGdeej0g");
const i_0pI6Lozv5Ow = () => import("./test.tsx_FieldInput_component_input_q_e_input_0pI6Lozv5Ow");
import { useSignal } from "@qwik.dev/core";
export const FieldInput = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_O84bGdeej0g, "FieldInput_component_O84bGdeej0g"),
);

=== test.tsx_FieldInput_component_O84bGdeej0g.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_0pI6Lozv5Ow = () => import("./test.tsx_FieldInput_component_input_q_e_input_0pI6Lozv5Ow");
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _val } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const FieldInput_component_O84bGdeej0g = () => {
  const localValue = useSignal("");
  return /* @__PURE__ */ _jsxSorted(
    "input",
    null,
    {
      "q-e:input": /* @__PURE__ */ qrl(
        i_0pI6Lozv5Ow,
        "FieldInput_component_input_q_e_input_0pI6Lozv5Ow",
      ),
      value: localValue,
      "q-e:input": inlinedQrl(_val, "_val", [localValue]),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_O84bGdeej0g",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "O84bGdeej0g",
  "canonicalFilename": "test.tsx_FieldInput_component_O84bGdeej0g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_FieldInput_component_input_q_e_input_0pI6Lozv5Ow.js === (ENTRY)
export const FieldInput_component_input_q_e_input_0pI6Lozv5Ow = () => {
  console.log("test");
};

/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_input_0pI6Lozv5Ow",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_input",
  "hash": "0pI6Lozv5Ow",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_input_0pI6Lozv5Ow",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_FieldInput_component",
  "ctxKind": "eventHandler",
  "ctxName": "onInput$",
  "captures": false
}
*/
